# xKit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  version
cmake/: Functions.cmake
xthread/: CMakeLists.txt  atomic.h  base.h  error.h  handle.h  memory.c  memory.h  mpsc.c  mpsc.h  proc.c  proc.h  queue.h  task.c  task.h
